[gd_scene load_steps=28 format=3 uid="uid://dpqbqosadj5g3"]

[ext_resource type="Script" path="res://scripts/Menu scripts/controls_menu.gd" id="1_rrtn1"]
[ext_resource type="FontFile" uid="uid://bkmn2h3knu02d" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_mgfks"]
[ext_resource type="Texture2D" uid="uid://dxa0ulxc22vhp" path="res://assets/sprites/buttons/wasd.png" id="3_7j38l"]
[ext_resource type="Texture2D" uid="uid://dnpkvk8mxubta" path="res://assets/sprites/buttons/ijk.png" id="3_hrfbw"]
[ext_resource type="Texture2D" uid="uid://d1gvs8i0sojbm" path="res://assets/sprites/buttons/dpad.png" id="5_sxvbp"]
[ext_resource type="Texture2D" uid="uid://dmc0uwkpdlkhb" path="res://assets/sprites/buttons/period.png" id="6_1i6fc"]
[ext_resource type="Texture2D" uid="uid://b7v12tn6xamht" path="res://assets/sprites/buttons/f.png" id="7_67q6a"]
[ext_resource type="Texture2D" uid="uid://ffubl8ytgkt3" path="res://assets/sprites/buttons/r1.png" id="8_odm64"]
[ext_resource type="Texture2D" uid="uid://280sbior6erw" path="res://assets/sprites/buttons/comma.png" id="9_a442f"]
[ext_resource type="Texture2D" uid="uid://pxq1t1qasmsa" path="res://assets/sprites/buttons/g.png" id="10_eeb33"]
[ext_resource type="Texture2D" uid="uid://depwtrr00i5da" path="res://assets/sprites/buttons/square.png" id="11_g6sgw"]
[ext_resource type="Texture2D" uid="uid://baakggf4ouquo" path="res://assets/sprites/buttons/x.png" id="11_nadc2"]
[ext_resource type="Texture2D" uid="uid://cgns34vsdbmoa" path="res://assets/sprites/buttons/slash.png" id="12_0gpro"]
[ext_resource type="Shader" path="res://shaders/scroll.gdshader" id="12_8cmfj"]
[ext_resource type="Texture2D" uid="uid://bnv83dd2t4qjc" path="res://assets/sprites/buttons/space.png" id="12_s8k6w"]
[ext_resource type="Texture2D" uid="uid://b47355i5hrilt" path="res://assets/sprites/pixelart_starfields/pixelart_starfield_diagonal_diffraction_spikes.png" id="13_dadut"]
[ext_resource type="AudioStream" uid="uid://cbyh0bucg0rfi" path="res://assets/Audio/DavidKBD - Cosmic Pack 02 - Galactic Pulse-full.ogg" id="14_l7ggv"]
[ext_resource type="Script" path="res://scripts/world_audio.gd" id="15_i26ur"]
[ext_resource type="PackedScene" uid="uid://bw5cb5fe23aa3" path="res://scenes/player.tscn" id="16_lt7e2"]
[ext_resource type="Gradient" uid="uid://bkumyxfsw02qu" path="res://resources/red_gradient.tres" id="17_ully6"]
[ext_resource type="Gradient" uid="uid://cxex3j6yqn5g8" path="res://resources/green_gradient.tres" id="18_ih1pr"]
[ext_resource type="AudioStream" uid="uid://dypkdd1kqhee7" path="res://assets/Sound Effects/Game/retroclick.ogg" id="19_j3war"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_an5hx"]
shader = ExtResource("12_8cmfj")
shader_parameter/speed = 0.05

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_bh0r3"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ed2yk"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_d33ls"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hg4ga"]
size = Vector2(196, 86)

[node name="ControlsArea" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rrtn1")

[node name="Control" type="Control" parent="."]
z_index = -3
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = -40.0
offset_right = -1.0
offset_bottom = -40.0

[node name="Label" type="Label" parent="Control"]
z_index = 1
layout_mode = 0
offset_left = -79.851
offset_top = -127.493
offset_right = 80.149
offset_bottom = -107.493
theme_override_fonts/font = ExtResource("2_mgfks")
theme_override_font_sizes/font_size = 20
text = "CONTROLS
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlsHBoxContainer" type="HBoxContainer" parent="Control"]
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -98.0
offset_right = 242.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ControlsHBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_stretch_ratio = 0.0
alignment = 2

[node name="keyboard2" type="Label" parent="Control/ControlsHBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("2_mgfks")
theme_override_font_sizes/font_size = 12
text = "Input
"
horizontal_alignment = 1

[node name="keyboard" type="Label" parent="Control/ControlsHBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mgfks")
theme_override_font_sizes/font_size = 12
text = "P1 Keyboard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Control/ControlsHBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mgfks")
theme_override_font_sizes/font_size = 12
text = "P2 Keyboard"
vertical_alignment = 1

[node name="Label2" type="Label" parent="Control/ControlsHBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mgfks")
theme_override_font_sizes/font_size = 12
text = "Controllers"
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/ControlsHBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
alignment = 2

[node name="movement" type="Label" parent="Control/ControlsHBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mgfks")
theme_override_font_sizes/font_size = 12
text = "Movement
"
horizontal_alignment = 1

[node name="ijkl" type="TextureRect" parent="Control/ControlsHBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
texture = ExtResource("3_hrfbw")
expand_mode = 3

[node name="wasd" type="TextureRect" parent="Control/ControlsHBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
texture = ExtResource("3_7j38l")
expand_mode = 3

[node name="dpad" type="TextureRect" parent="Control/ControlsHBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
texture = ExtResource("5_sxvbp")
expand_mode = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/ControlsHBoxContainer"]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/ControlsHBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("2_mgfks")
theme_override_font_sizes/font_size = 12
text = "Grab"

[node name="period" type="TextureRect" parent="Control/ControlsHBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 9.82
texture = ExtResource("6_1i6fc")
expand_mode = 3

[node name="f" type="TextureRect" parent="Control/ControlsHBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 9.82
texture = ExtResource("7_67q6a")
expand_mode = 3

[node name="r1" type="TextureRect" parent="Control/ControlsHBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 9.82
texture = ExtResource("8_odm64")
expand_mode = 3

[node name="VBoxContainer4" type="VBoxContainer" parent="Control/ControlsHBoxContainer"]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="Control/ControlsHBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("2_mgfks")
theme_override_font_sizes/font_size = 12
text = "Dash
"

[node name="comma" type="TextureRect" parent="Control/ControlsHBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 4.87
texture = ExtResource("9_a442f")
expand_mode = 3

[node name="G" type="TextureRect" parent="Control/ControlsHBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 4.87
texture = ExtResource("10_eeb33")
expand_mode = 3

[node name="square" type="TextureRect" parent="Control/ControlsHBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 4.87
texture = ExtResource("11_g6sgw")
expand_mode = 3

[node name="VBoxContainer5" type="VBoxContainer" parent="Control/ControlsHBoxContainer"]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="Control/ControlsHBoxContainer/VBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("2_mgfks")
theme_override_font_sizes/font_size = 12
text = "Jump
"

[node name="slash" type="TextureRect" parent="Control/ControlsHBoxContainer/VBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 4.87
texture = ExtResource("12_0gpro")
expand_mode = 3

[node name="place holder" type="TextureRect" parent="Control/ControlsHBoxContainer/VBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 4.87
texture = ExtResource("12_s8k6w")

[node name="x" type="TextureRect" parent="Control/ControlsHBoxContainer/VBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 4.87
texture = ExtResource("11_nadc2")
expand_mode = 3

[node name="TextureRect" type="TextureRect" parent="Control"]
z_index = -1
texture_repeat = 2
material = SubResource("ShaderMaterial_an5hx")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -307.0
offset_top = -170.0
offset_right = 126.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.48, 1.08)
texture = ExtResource("13_dadut")

[node name="Settings" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -282.0
offset_top = 92.0
offset_right = -94.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2

[node name="ControlsSettings" type="Label" parent="Control/Settings"]
layout_mode = 2
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("2_mgfks")
theme_override_font_sizes/font_size = 12
text = "Jump Settings"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Settings"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="BlankLabel" type="Label" parent="Control/Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("2_mgfks")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="P1JumpWithUp" type="CheckButton" parent="Control/Settings/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_mgfks")
theme_override_font_sizes/font_size = 10
text = "P1 Jump with Up"
alignment = 1
icon_alignment = 1
vertical_icon_alignment = 0

[node name="P2JumpWithUp" type="CheckButton" parent="Control/Settings/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_mgfks")
theme_override_font_sizes/font_size = 10
text = "P2 Jump with Up"
alignment = 1
icon_alignment = 1
vertical_icon_alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = 141.0
offset_right = 346.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
theme_override_fonts/font = ExtResource("2_mgfks")
text = "Back"
alignment = 0

[node name="Node2D" type="Node2D" parent="."]
z_index = 5

[node name="StaticCamera" type="Camera2D" parent="Node2D"]
z_index = 5
position = Vector2(0, -30)
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 20.0

[node name="PlayerRespawnLocation" type="Node2D" parent="Node2D/StaticCamera"]

[node name="WorldAudio" type="AudioStreamPlayer2D" parent="Node2D/StaticCamera"]
position = Vector2(-10, 23)
stream = ExtResource("14_l7ggv")
volume_db = -15.0
script = ExtResource("15_i26ur")

[node name="LeftWorldBorder" type="StaticBody2D" parent="Node2D/StaticCamera"]
position = Vector2(-248, 23)
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/StaticCamera/LeftWorldBorder"]
shape = SubResource("WorldBoundaryShape2D_bh0r3")

[node name="RightWorldBorder" type="StaticBody2D" parent="Node2D/StaticCamera"]
position = Vector2(248, 23)
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/StaticCamera/RightWorldBorder"]
shape = SubResource("WorldBoundaryShape2D_ed2yk")

[node name="BottomWorldBorder" type="StaticBody2D" parent="Node2D/StaticCamera"]
position = Vector2(0, 122)
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/StaticCamera/BottomWorldBorder"]
shape = SubResource("WorldBoundaryShape2D_d33ls")

[node name="RectangleBorrder" type="StaticBody2D" parent="Node2D/StaticCamera"]
position = Vector2(-224, 119)
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/StaticCamera/RectangleBorrder"]
position = Vector2(35, -1)
shape = SubResource("RectangleShape2D_hg4ga")

[node name="Player1" parent="Node2D" node_paths=PackedStringArray("respawn_pos") instance=ExtResource("16_lt7e2")]
texture_filter = 3
position = Vector2(-33, 80)
player_color = Color(0.461862, 1.05888e-06, 2.64719e-07, 1)
dash_color_gradient = ExtResource("17_ully6")
respawn_pos = NodePath("../RespawnPos")

[node name="Player2" parent="Node2D" node_paths=PackedStringArray("respawn_pos") instance=ExtResource("16_lt7e2")]
texture_filter = 3
position = Vector2(27, 80)
player_id = 1
player_color = Color(0, 0.317647, 0.145098, 1)
dash_color_gradient = ExtResource("18_ih1pr")
respawn_pos = NodePath("../RespawnPos")

[node name="Click" type="AudioStreamPlayer2D" parent="Node2D"]
stream = ExtResource("19_j3war")
volume_db = 6.0
attenuation = 0.138696

[node name="RespawnPos" type="Node2D" parent="Node2D"]

[connection signal="toggled" from="Control/Settings/VBoxContainer/P1JumpWithUp" to="." method="_on_p1_jump_with_up_toggled"]
[connection signal="toggled" from="Control/Settings/VBoxContainer/P2JumpWithUp" to="." method="_on_p2_jump_with_up_toggled"]
[connection signal="pressed" from="Control/MarginContainer/Back" to="." method="_on_back_pressed"]
