[gd_scene load_steps=6 format=3 uid="uid://cija2nagxry7u"]

[ext_resource type="Script" path="res://scripts/Menu scripts/controls_menu.gd" id="1_s0e62"]
[ext_resource type="Shader" path="res://shaders/settingscroll.gdshader" id="2_kqf02"]
[ext_resource type="Texture2D" uid="uid://b47355i5hrilt" path="res://assets/sprites/pixelart_starfields/pixelart_starfield_diagonal_diffraction_spikes.png" id="3_8yabj"]
[ext_resource type="FontFile" uid="uid://bkmn2h3knu02d" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="4_35fqx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e7uwf"]
shader = ExtResource("2_kqf02")
shader_parameter/speed = 0.05

[node name="ControlsMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_s0e62")

[node name="TextureRect" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_e7uwf")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -555.0
offset_top = -303.0
offset_right = 557.0
offset_bottom = 305.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8yabj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -108.0
offset_top = -52.0
offset_right = 108.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SettingsPlaceholder" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_35fqx")
text = "Placeholder"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_35fqx")
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
